--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "@sendgrid/mail": "^7.6.0",
     "framer-motion": "^5.6.0",
+    "html-react-parser": "^1.4.8",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
