--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,11 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.49.7",
-    "babel-eslint": "^10.1.0",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9"
+    "sass": "^1.49.7"
+
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.5.4",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9"
   }
