--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,11 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sass": "^1.49.7"
-
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.5.4",
-    "eslint": "8.7.0",
+    "@babel/core": "^7.17.2",
+    "@babel/eslint-parser": "^7.17.0",
+    "eslint": "^8.7.0",
     "eslint-config-next": "12.0.9"
   }
 }
