--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@babel/eslint-parser": "^7.17.0",
+    "@next/eslint-plugin-next": "^12.0.10",
     "eslint": "^8.7.0",
     "eslint-config-next": "12.0.9"
   }
