--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "@babel/core": "^7.17.2",
+    "@babel/eslint-parser": "^7.17.0",
+    "@next/eslint-plugin-next": "^12.0.10",
+    "eslint": "^8.7.0",
+    "eslint-config-next": "12.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
